--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <elasticsearch.version>7.14.0</elasticsearch.version>
         <redisson.version>3.23.2</redisson.version>
         <guava.version>32.1.2-jre</guava.version>
+        <jackson.version>2.15.3</jackson.version>
         <spring-kafka.version>3.1.1</spring-kafka.version>
         <disruptor.version>3.4.2</disruptor.version>
         <metrics.version>4.2.6</metrics.version>
@@ -221,6 +222,18 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+
+            <!-- jackson -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
             </dependency>
 
             <!-- spring boot kafka https://spring.io/projects/spring-kafka -->
