--- a/seed-engine/src/main/resources/application-prod.properties
+++ b/seed-engine/src/main/resources/application-prod.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/engine
 # spring mybatis
 mybatis.type-aliases-package=com.luxx.engine.model
 mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.mapper-locations=classpath:/mapper/*.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
 # spring datasource
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/data_db?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=GMT%2B8
 spring.datasource.username=root
