--- a/seed-web/src/main/resources/application-prod.properties
+++ b/seed-web/src/main/resources/application-prod.properties
@@ -3,10 +3,6 @@ server.port=19090
 server.servlet.context-path=/
 spring.messages.basename=i18n/messages
 spring.messages.encoding=UTF-8
-spring.mvc.locale=zh_CN
-spring.mvc.servlet.path=/
-spring.mvc.view.prefix=/page/
-spring.mvc.view.suffix=.html
 # freemarker
 #spring.freemarker.templateLoaderPath=classpath:/templates/
 #spring.freemarker.suffix=.ftl
@@ -21,7 +17,7 @@ pagehelper.support-methods-arguments=true
 # spring mybatis
 mybatis.type-aliases-package=com.luxx.seed.model
 mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.mapper-locations=classpath:/mapper/*.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
 # spring datasource
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/data_db?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=GMT%2B8
 spring.datasource.username=root
